# AgriCore-MCP

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  debug.py  debug.txt  main.py  pyproject.toml  railway.json  requirements.txt  setup_instructions.md  start_server.bat  test_alpha_out.txt  test_client.py  test_new_data.py  test_out.txt
context/: DesignDocument  FeatureDescriptions  Requirements  Reuirements  SystemArchitecture  TaskLists
data/guidelines/: guide_acacia.md  guide_acalypha.md  guide_acanthus.md  guide_achillea__yarrow.md  guide_acorn_squash.md  guide_adonidia.md  guide_african_evergreen.md  guide_african_fern_pine.md  guide_african_violet.md  guide_ageratum.md  guide_algerian_ivy.md  guide_aloe_vera.md  guide_alstroemeria.md  guide_alyssum.md  guide_amaltas__golden_shower.md  guide_amaranth.md  guide_amaryllis.md  guide_anemone.md  guide_angelonia.md  guide_anigozanthos__kangaroo_paw.md  guide_anthurium.md  guide_apple_tree.md  guide_aquilegia__columbine.md  guide_areca_palm.md  guide_armeria__thrift.md  guide_arum_lily.md  guide_aster.md  guide_astilbe.md  guide_azalea.md  guide_aztec_lily.md  guide_baby_rubber_plant.md  guide_bachelor___s_button.md  (+497 more)
extra/: PROJECT_CONTEXT.md  demo_output.txt  demo_output_utf8.txt  test_alpha_out_utf8.txt  test_out.txt
scripts/: mcp_sse_smoke.py
src/: __init__.py  build_index.py  rag_engine.py  reference_catalog.py  router.py  rules_engine.py  server_main.py
tests/: conftest.py  test_alpha.py  test_beta.py  test_preview.py  test_reference_catalog.py
web/: app.js  index.html  styles.css
(+150 files in other folders)
